# mrpt_path_planning

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
.circleci/: config.yml
.github/workflows/: build-linux.yml
apps/: CMakeLists.txt
apps/path-planner-cli/: CMakeLists.txt  path-planner-cli.cpp
apps/plan-path/: CMakeLists.txt  plan-path.cpp
apps/selfdriving-simulator-gui/: CMakeLists.txt  selfdriving-simulator-gui.cpp
cmake/: misc_cmake_functions.cmake  script_version_number.cmake  template-config.cmake.in  version.h.in
cmakemodules/: FindTCLAP.cmake
doc/: Doxyfile  graphs.odg  overview.md  rosdoc.yaml
doc/source/: conf.py  index.rst  mainpage.md.in
libselfdriving/: CMakeLists.txt
libselfdriving/include/libselfdriving/: MotionPrimitivesTree.h  MoveEdgeSE2_TPS.h  ObstacleSource.h  PlannerTypes.h  Planner_Astar.h  SE2_KinState.h  TPS_RRTstar.h  bestTrajectory.h  mrpt_1or2.h  ptg_t.h  viz.h
libselfdriving/include/selfdriving/: CostEvaluator.h  CostEvaluatorCostMap.h  MotionPrimitivesTree.h  MoveEdgeSE2_TPS.h  NavPlanExecutor.h  ObstacleSource.h  PlannerInput.h  PlannerOutput.h  RenderOptions.h  SE2_KinState.h  TPS_RRTstar.h  TrajectoriesAndRobotShape.h  VehicleLocalizationState.h  VehicleMotionInterface.h  bestTrajectory.h  ptg_t.h  render_tree.h  viz.h
libselfdriving/include/selfdriving/algos/: CostEvaluator.h  CostEvaluatorCostMap.h  CostEvaluatorPreferredWaypoint.h  NavEngine.h  Planner.h  TPS_Astar.h  TPS_RRTstar.h  WaypointSequencer.h  bestTrajectory.h  edge_interpolated_path.h  interpolate_path.h  refine_trajectory.h  render_tree.h  render_vehicle.h  tp_obstacles_single_path.h  trajectories.h  transform_pc_square_clipping.h  viz.h  within_bbox.h
libselfdriving/include/selfdriving/data/: EnqueuedMotionCmd.h  MotionPrimitivesTree.h  MoveEdgeSE2_TPS.h  PlannerInput.h  PlannerOutput.h  ProgressCallbackData.h  RenderOptions.h  SE2_KinState.h  TrajectoriesAndRobotShape.h  VehicleLocalizationState.h  VehicleOdometryState.h  Waypoints.h  basic_types.h  const_ref_t.h  ptg_t.h  trajectory_t.h
libselfdriving/include/selfdriving/interfaces/: LidarSource.h  MVSIM_VehicleInterface.h  ObstacleSource.h  TargetApproachController.h  VehicleMotionInterface.h
libselfdriving/include/selfdriving/ptgs/: DiffDriveCollisionGridBased.h  DiffDrive_C.h  HolonomicBlend.h  SpeedTrimmablePTG.h
libselfdriving/src/: CostEvaluator.cpp  CostEvaluatorCostMap.cpp  MoveEdgeSE2_TPS.cpp  NavPlanExecutor.cpp  ObstacleSource.cpp  PlannerInput.cpp  PlannerOutput.cpp  PlannerTypes.cpp  Planner_Astar.cpp  SE2_KinState.cpp  TPS_RRTstar.cpp  TrajectoriesAndRobotShape.cpp  bestTrajectory.cpp  registerClasses.cpp  render_tree.cpp  viz.cpp
libselfdriving/src/algos/: CostEvaluator.cpp  CostEvaluatorCostMap.cpp  CostEvaluatorPreferredWaypoint.cpp  NavEngine.cpp  Planner.cpp  TPS_Astar.cpp  TPS_RRTstar.cpp  WaypointSequencer.cpp  bestTrajectory.cpp  edge_interpolated_path.cpp  interpolate_path.cpp  refine_trajectory.cpp  render_tree.cpp  render_vehicle.cpp  tp_obstacles_single_path.cpp  trajectories.cpp  transform_pc_square_clipping.cpp  viz.cpp
libselfdriving/src/data/: MoveEdgeSE2_TPS.cpp  PlannerInput.cpp  PlannerOutput.cpp  SE2_KinState.cpp  TrajectoriesAndRobotShape.cpp  Waypoints.cpp
libselfdriving/src/interfaces/: ObstacleSource.cpp  TargetApproachController.cpp  VehicleMotionInterface.cpp
libselfdriving/src/ptgs/: DiffDriveCollisionGridBased.cpp  DiffDrive_C.cpp  HolonomicBlend.cpp
mrpt_path_planning/: CMakeLists.txt
mrpt_path_planning/include/mpp/algos/: CostEvaluator.h  CostEvaluatorCostMap.h  CostEvaluatorPreferredWaypoint.h  NavEngine.h  Planner.h  TPS_Astar.h  bestTrajectory.h  edge_interpolated_path.h  refine_trajectory.h  render_tree.h  render_vehicle.h  tp_obstacles_single_path.h  trajectories.h  transform_pc_square_clipping.h  viz.h  within_bbox.h
mrpt_path_planning/include/mpp/data/: EnqueuedMotionCmd.h  MotionPrimitivesTree.h  MoveEdgeSE2_TPS.h  PlannerInput.h  PlannerOutput.h  ProgressCallbackData.h  RenderOptions.h  SE2_KinState.h  TrajectoriesAndRobotShape.h  VehicleLocalizationState.h  VehicleOdometryState.h  Waypoints.h  basic_types.h  const_ref_t.h  ptg_t.h  trajectory_t.h
mrpt_path_planning/include/mpp/interfaces/: LidarSource.h  MVSIM_VehicleInterface.h  ObstacleSource.h  TargetApproachController.h  VehicleMotionInterface.h
mrpt_path_planning/include/mpp/ptgs/: DiffDriveCollisionGridBased.h  DiffDrive_C.h  HolonomicBlend.h  SpeedTrimmablePTG.h
mrpt_path_planning/src/: registerClasses.cpp
mrpt_path_planning/src/algos/: CostEvaluator.cpp  CostEvaluatorCostMap.cpp  CostEvaluatorPreferredWaypoint.cpp  NavEngine.cpp  Planner.cpp  TPS_Astar.cpp  bestTrajectory.cpp  edge_interpolated_path.cpp  refine_trajectory.cpp  render_tree.cpp  render_vehicle.cpp  tp_obstacles_single_path.cpp  trajectories.cpp  transform_pc_square_clipping.cpp  viz.cpp
mrpt_path_planning/src/data/: MoveEdgeSE2_TPS.cpp  PlannerInput.cpp  PlannerOutput.cpp  SE2_KinState.cpp  TrajectoriesAndRobotShape.cpp  Waypoints.cpp
mrpt_path_planning/src/interfaces/: ObstacleSource.cpp  TargetApproachController.cpp  VehicleMotionInterface.cpp
mrpt_path_planning/src/ptgs/: DiffDriveCollisionGridBased.cpp  DiffDrive_C.cpp  HolonomicBlend.cpp
scripts/: plotPath.m
share/: costmap-obstacles.yaml  maps.pptx  mvsim-demo-astar-planner-params.yaml  mvsim-demo-rrtstar-planner-params.yaml  mvsim-demo-waypoints01.yaml  mvsim-demo-waypoints02.yaml  mvsim-demo.xml  nav-engine-params.yaml  obstacles_01.txt  ptgs_ackermann_vehicle.ini  ptgs_holonomic_robot.ini
wip-experimental/: TPS_RRTstar.cpp  TPS_RRTstar.h
